--- a/Federal_Election_Commission_Database/federal_elections_2012.ipynb
+++ b/Federal_Election_Commission_Database/federal_elections_2012.ipynb
@@ -50,7 +50,7 @@
    },
    "outputs": [],
    "source": [
-    "fec <- read_csv(\"../datasets/fec/P00000001-ALL.csv\")"
+    "fec <- read_csv(\"https://raw.githubusercontent.com/wesm/pydata-book/2nd-edition/datasets/fec/P00000001-ALL.csv\")"
    ]
   },
   {
